# CocoroCore

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AIAVATAR_EVENT_HANDLERS.md  AIAvatarKit_SPEC.md  AIAvatarKit_USAGE_GUIDE.md  API_SPECIFICATION_UNIFIED.md  CHATMEMORY_INTEGRATION.md  CLAUDE.md  COCOROCORE_IDEAL_API_DESIGN.md  COCOROCORE_IMPLEMENTATION_GUIDE.md  CocoroAI全体構成.drawio  CocoroCore.py  CocoroCore.spec  LICENSE.txt  README.md  REST_API_MIGRATION_PLAN.md  SESSION_CONTEXT_SPECIFICATION.md  build.bat  build.py  build_cocoro.py  build_config.py  build_readme.md  build_simple.bat  build_windows.bat  check_litellm.py  check_tiktoken.py  cocoro_core.py  config_loader.py  copy_to_cocoroai.ps1  create_spec.py  dummy_db.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  server.py  test_cocorocore.py  仕様書.md
.claude/: settings.local.json
.github/: copilot-instructions.md
patches/: __init__.py  ollama_chat_image_patch.py
src/: api_clients.py  app_initializer.py  claude_mcp_importer.py  client_initializer.py  cocoro_core.py  config_loader.py  config_validator.py  dummy_db.py  endpoints.py  event_handlers.py  hook_processor.py  image_processor.py  llm_manager.py  log_handler.py  main.py  mcp_diagnostics.py  mcp_tools.py  memory_client.py  memory_tools.py  prompt_utils.py  response_processor.py  security.py  session_manager.py  shutdown_handler.py  sts_configurator.py  stt_manager.py  time_utils.py  tools_configurator.py  vad_manager.py  voice_processor.py
tests/: conftest.py  test_api_clients.py  test_app_initializer.py  test_config_loader.py  (+20 more)
