[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# 対象Pythonバージョン
target-version = "py310"
# 行の長さ（制限なし）
line-length = 320

# リンターの設定
[tool.ruff.lint]
# 有効にするルール
# E, F: flake8互換ルール
# I: isort互換
# D: docstring
# S: bandit互換セキュリティチェック
select = ["E", "F", "I", "S"]
ignore = [
  "D",    # ドキュメント関連
  "I001", # isortの設定
  "S311", # suspicious-random-choice
  "S603",
]

# 除外ディレクトリ
exclude = ["venv", ".venv", "build", "dist", "__pycache__"]

# isortの設定
[tool.ruff.lint.isort]
known-first-party = ["cocoro_core"]
